<resources>
    <string name="app_name">Food Runner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_fav_restaurant">Favourite Restaurant</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_faq">Frequently Asked Questions</string>
    <string name="menu_logout">Logout</string>
    <string name="preference_file_name">com.finals.foodrunner</string>

</resources>