<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_fav_restuarant"
            android:icon="@drawable/ic_nav_fav"
            android:title="@string/menu_fav_restaurant" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_nav_order_history"
            android:title="@string/menu_order_history" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_nav_faq"
            android:title="@string/menu_faq" />


        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="Logout" />

    </group>
</menu>