<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.finals.foodrunner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_menuFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:destination="@id/menuFragment" />
        <action
            android:id="@+id/action_nav_home_to_loginFragment2"
            app:destination="@id/loginFragment2"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.finals.foodrunner.ui.my_profile.MyProfile"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_my_profile" />
    <fragment
        android:id="@+id/nav_fav_restuarant"
        android:name="com.finals.foodrunner.ui.fav_restaurant.FavouriteRestaurants"
        android:label="@string/menu_fav_restaurant"
        tools:layout="@layout/fragment_fav_restaurant" >
        <action
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            android:id="@+id/action_nav_fav_restuarant_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_order_history"
        android:name="com.finals.foodrunner.ui.order_history.OrderHistory"
        android:label="@string/menu_order_history"
        tools:layout="@layout/fragment_order_history" />
    <fragment
        android:id="@+id/nav_faq"
        android:name="com.finals.foodrunner.ui.faq.Faq"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_home" />
    <dialog
        android:id="@+id/logout"
        android:name="com.finals.foodrunner.ui.logout.Logout"
        android:label="Logout" >
        <action
            android:id="@+id/action_logout_to_loginFragment2"
            app:destination="@id/loginFragment2" />
    </dialog>

    <fragment
        android:id="@+id/loginFragment2"
        android:name="com.finals.foodrunner.ui.login.LoginFragment"
        android:label="login_fragment"
        tools:layout="@layout/login_fragment" >
        <action
            android:id="@+id/action_loginFragment2_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_loginFragment2_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/loginFragment2"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.finals.foodrunner.ui.signup.SignUpFragment"
        android:label="sign_up_fragment"
        tools:layout="@layout/sign_up_fragment" >
        <action
            android:id="@+id/action_signUpFragment_to_loginFragment2"
            app:destination="@id/loginFragment2" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.finals.foodrunner.ui.menu.MenuFragment"
        android:label="MenuFragment" >
        <argument
            android:name="Restaurants"
            app:argType="com.finals.foodrunner.objects.Restaurant" />
        <action
            android:id="@+id/action_menuFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.finals.foodrunner.ui.cart.CartFragment"
        android:label="cart_fragment"
        tools:layout="@layout/cart_fragment" >
        <argument
            android:name="orderedFood"
            app:argType="com.finals.foodrunner.objects.MenuItem[]" />
        <argument
            android:name="restuarant"
            app:argType="com.finals.foodrunner.objects.Restaurant" />
        <action
            android:id="@+id/action_cartFragment_to_confirmationFragment2"
            app:destination="@id/confirmationFragment2" />
    </fragment>
    <fragment
        android:id="@+id/confirmationFragment2"
        android:name="com.finals.foodrunner.ui.confirmation.ConfirmationFragment"
        android:label="confirmation_fragment"
        tools:layout="@layout/confirmation_fragment" >
        <argument
            android:name="orderedFood"
            app:argType="com.finals.foodrunner.objects.MenuItem[]" />

    </fragment>

</navigation>